--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -11,7 +11,7 @@
 		<h2 class="first">Firmware</h2>
 		<p>
 			Current firmware version: <span name="FW_VERSION">-</span><br/>
-			<a href="/fwupdate/">Update firmware</a>
+			<a href="/fwupdate">Update firmware</a>
 		</p>
 
 		<h2>Backup or restore configuration</h2>
@@ -85,6 +85,9 @@
 					<option value="5">50 Samples/s</option>
 					<option value="6">100 Samples/s</option>
 					<option value="7">250 Samples/s</option>
+					<option value="8">500 Samples/s</option>
+					<option value="9">1 kS/s</option>
+					<option value="10">2.5 kS/s</option>
 				</select>
 			</p>
 
