--- a/front/www/html/home.html
+++ b/front/www/html/home.html
@@ -81,5 +81,75 @@
 		</p>
     </div>
 
+    <div class="flexdiv-lg greybox">
+		<h3 class="first">Specifications</h3>
+    	<p>
+        	<table style="table-layout: fixed; width: 100%">
+            	<tr>
+                	<th style="width: 35%">Parameter</th>
+                	<th style="width: 40%">Description</th>
+                	<th style="width: 25%">Value</th>
+            	</tr>
+            	<tr>
+                	<td colspan="3"><i><b>Electrical characteristics</b></i></td>
+            	</tr>
+            	<tr>
+                	<td>Supply voltage</td><td></td><td>4.75 V ... 5.25 V</td>
+            	</tr>
+            	<tr>
+                	<td>Supply current</td><td></td><td>TBD mA (max)</td>
+            	</tr>
+
+            	<tr>
+                	<td colspan="3"><i><b>Analog input characteristics</b></i></td>
+            	</tr>
+            	<tr>
+                	<td>Input voltage range</td><td>selectable</td><td>-10 V ... +10 V<br/>-60 V ... +60 V</td>
+            	</tr>
+            	<tr>
+                	<td>Input impedance</td><td></td><td>100 kOhm</td>
+            	</tr>
+            	<tr>
+                	<td>Input accuracy</td><td></td><td>+/-0.2% (check: LSB + R tolerances!)</td>
+            	</tr>
+            	<tr>
+                	<td>ADC resolution</td><td>selectable</td><td>12 bit<br/>16 bit</td>
+            	</tr>
+            	<tr>
+                	<td>Analog filter</td><td>Analog anti-aliasing filter cut-off frequency (1st order)</td><td>TBD kHz</td>
+            	</tr>
+            	<tr>
+                	<td>Digital filter</td><td>Digital anti-aliasing filter cut-off frequency (1st order)<br/>Active in 16 bit mode only</td><td>f<sub>sample</sub>/2</td>
+            	</tr>
+            	<tr>
+                	<td>Input protection</td><td>Over-voltage protection</td><td>clamped</td>
+            	</tr>
+
+               	<tr>
+                	<td colspan="3"><i><b>Digital input characteristics</b></i></td>
+            	</tr>
+            	<tr>
+                	<td>Input voltage range</td><td></td><td>-60 V ... +60 V</td>
+            	</tr>
+            	<tr>
+                	<td>Input impedance</td><td></td><td>TBD kOhm</td>
+            	</tr>
+            	<tr>
+                	<td>Analog filter</td><td>Analog de-bounce filter cut-off frequency (1st order)</td><td>TBD kHz</td>
+            	</tr>
+            	<tr>
+                	<td>Input LOW</td><td>Voltage to read digital read LOW (false)</td><td>TBD V</td>
+            	</tr>
+            	<tr>
+                	<td>Input HIGH</td><td>Voltage to read digital read HIGH (true)</td><td>TBD V</td>
+            	</tr>
+            	<tr>
+                	<td>Input protection</td><td>Over-voltage protection</td><td>clamped</td>
+            	</tr>
+
+    		</table>
+    	</p>
+    </div>
+
   </div>
 </div>
