--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -2,9 +2,10 @@
 
 <div id="log">
     <div id="logger">
-        <h2 class="first">Logger</h3>
-        <p>Timestamp: <span name="TIMESTAMPSTR">-</span></p>
-        <p>Current status: <span name="LOGGER_STATE">-</span></p>
+        <h2 class="first">Logger</h2>
+        <p>Logger time: <span name="TIMESTAMPSTR">-</span></p>
+        <p>Logger status: <span name="LOGGER_STATE">-</span></p>
+        <p>Logger error: <span name="ERRORCODE">-</span></p>
         <p><i><b>Note:</b> ensure you have configured the channels correctly before starting logging!</i></p>
         <div id="log_logger_buttons">
             <input id="btn_logger_start" class="button" type="button" name="btn_logger_start" disabled value="&checkmark; Start logging" onclick="loggerStart()"/>
@@ -17,8 +18,8 @@
         <h2>File browser</h2>
         <p>SD card status: <span name="SD_CARD_STATUS">-</span></p>
         <p>SD card free space: <span name="SD_CARD_FREE_SPACE">-</span></p>
-        
-        <div id="filelist" style="display: block; max-width: 800px; border: 0;">
+
+        <div id="filelist" style="display: block; max-width: 800px; border: 0; margin-top: 20px;">
             Loading list of files...
         </div>
 
