--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -11,7 +11,7 @@
 		<h2 class="first">Firmware</h2>
 		<p>
 			Current firmware version: <span name="FW_VERSION">-</span><br/>
-			<a href="/fwupdate">Update firmware</a>
+			<a href="/fwupdate/">Update firmware</a>
 		</p>
 
 		<h2>Backup or restore configuration</h2>
@@ -48,7 +48,7 @@
 				<input id="WIFI_SSID" name="WIFI_SSID" class="element" type="text" maxlength="32" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
 
 				<label for="WIFI_PASSWORD">Password</label>
-				<input id="WIFI_PASSWORD" name="WIFI_PASSWORD" class="element" type="text" maxlength="64" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
+				<input id="WIFI_PASSWORD" name="WIFI_PASSWORD" class="element" type="password" maxlength="64" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
 
 				<p>After entering the connection details above, you can test the WiFi connection by clicking on the button below.</p>
 				<p><i><b>Tip:</b> after configuring, this page will be available via http://IPADDRESS (e.g. http://192.168.1.123).</i></p>
@@ -85,9 +85,6 @@
 					<option value="5">50 Samples/s</option>
 					<option value="6">100 Samples/s</option>
 					<option value="7">250 Samples/s</option>
-					<option value="8">500 Samples/s</option>
-					<option value="9">1 kS/s</option>
-					<option value="10">2.5 kS/s</option>
 				</select>
 			</p>
 
