--- a/main/upload_script.html
+++ b/main/upload_script.html
@@ -174,48 +174,73 @@
     }
   }
 
+  function processNumber(number) {
+    switch (number) {
+      case 0:
+        document.getElementById("fw-update-state").innerHTML += "<p>IDLE</p>";
+        break;
+
+      case 1:
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Flashing support chip</p>";
+        break;
+
+      case 2:
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Flashing data</p>";
+        break;
+
+      case 3:
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Flashing main chip</p>";
+        break;
+
+      case 4:
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Update complete, rebooting...</p>";
+        break;
+
+      case 5:
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Update failed</p>";
+        break;
+    }
+  }
+
   async function doWork(files, upload_path, myDiv) {
     try {
       const result = await uploadFiles(files, upload_path, myDiv);
       if (!result) {
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Failed to upload files!</p>";
         return;
       }
-      xhttp2 = new XMLHttpRequest();
-      let lastResponseLength = 0;
-      xhttp2.onreadystatechange = function () {
-        if (xhttp2.readyState == 3) {
-          var partialResponse = xhttp2.responseText;
-          // Extract the new data from the partial response
-          var newData = partialResponse.substring(lastResponseLength);
-          // Update the length of the response
-          lastResponseLength = partialResponse.length;
-          myDiv.innerHTML += newData;
-        } else if (xhttp2.readyState == 4 && xhttp2.status == 200) {
-          var partialResponse = xhttp2.responseText;
-          // Extract the new data from the partial response
-          var newData = partialResponse.substring(lastResponseLength);
-          // Update the length of the response
-          lastResponseLength = partialResponse.length;
-          myDiv.innerHTML += newData;
-          // Process the response here
-          if (partialResponse.indexOf("succesfull") != -1) {
-            alert("Firmware upgrade succesfull!");
-            window.location.href = "/";
-          } else if (partialResponse.indexOf("failed") != -1) {
-            alert("Flashing Uberlogger failed!");
-          }
-        }
-      };
 
-      xhttp2.timeout = 60000; // time in milliseconds
+      // Start the FW update process
+      try {
+        result2 = await fetch("/fwupdate/startupgrade");
+      } catch (result2) {
+        document.getElementById("fw-update-state").innerHTML =
+          "<p>Can't start update process</p>";
+      }
 
-      xhttp2.ontimeout = () => {
-        alert(
-          "Connection timed out. Please check the connection and reset your Uberlogger"
-        );
-      };
-      xhttp2.open("GET", upload_prefix + "/fwupdate/startupgrade", true);
-      xhttp2.send();
+      // Keep polling for state of FW updater
+      const intervalId = setInterval(() => {
+        fetch("/fwupdate/state")
+          .then((response) => response.json())
+          .then((data) => {
+            processNumber(data);
+            if (data === 4) {
+              clearInterval(intervalId);
+              // Wait for 3 seconds before forwarding to main page
+              setTimeout(() => {
+                window.location.href = "/";
+              }, 3000);
+            }
+          })
+          .catch((error) => console.error("Error:", error));
+      }, 1000);
+      console.log("done");
     } catch (err) {
       alert("Upload failed: " + err);
       return;
