--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -48,7 +48,7 @@
 				<input id="WIFI_SSID" name="WIFI_SSID" class="element" type="text" maxlength="32" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
 
 				<label for="WIFI_PASSWORD">Password</label>
-				<input id="WIFI_PASSWORD" name="WIFI_PASSWORD" class="element" type="password" maxlength="64" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
+				<input id="WIFI_PASSWORD" name="WIFI_PASSWORD" class="element" type="text" maxlength="64" autocomplete="off" autocorrect="off" autocapitalize="none" value=""/> 
 
 				<p>After entering the connection details above, you can test the WiFi connection by clicking on the button below.</p>
 				<p><i><b>Tip:</b> after configuring, this page will be available via http://IPADDRESS (e.g. http://192.168.1.123).</i></p>
