--- a/front/www/html/home.html
+++ b/front/www/html/home.html
@@ -97,7 +97,7 @@
                 	<td>Supply voltage</td><td></td><td>4.75 V ... 5.25 V</td>
             	</tr>
             	<tr>
-                	<td>Supply current</td><td></td><td>TBD mA (max)</td>
+                	<td>Supply current</td><td></td><td>300 mA (max)</td>
             	</tr>
 
             	<tr>
@@ -116,7 +116,7 @@
                 	<td>ADC resolution</td><td>selectable</td><td>12 bit<br/>16 bit</td>
             	</tr>
             	<tr>
-                	<td>Analog filter</td><td>Analog anti-aliasing filter cut-off frequency (1st order)</td><td>TBD kHz</td>
+                	<td>Analog filter</td><td>Analog anti-aliasing filter cut-off frequency (1st order)</td><td>5 kHz</td>
             	</tr>
             	<tr>
                 	<td>Digital filter</td><td>Digital anti-aliasing filter cut-off frequency (1st order)<br/>Active in 16 bit mode only</td><td>f<sub>sample</sub>/2</td>
@@ -132,16 +132,16 @@
                 	<td>Input voltage range</td><td></td><td>-60 V ... +60 V</td>
             	</tr>
             	<tr>
-                	<td>Input impedance</td><td></td><td>TBD kOhm</td>
+                	<td>Input impedance</td><td></td><td>100 kOhm</td>
             	</tr>
             	<tr>
-                	<td>Analog filter</td><td>Analog de-bounce filter cut-off frequency (1st order)</td><td>TBD kHz</td>
+                	<td>Analog filter</td><td>Analog de-bounce filter cut-off frequency (1st order)</td><td>100 kHz</td>
             	</tr>
             	<tr>
-                	<td>Input LOW</td><td>Voltage to read digital read LOW (false)</td><td>TBD V</td>
+                	<td>Input LOW</td><td>Voltage to read digital read LOW (false)</td><td>1.0 V</td>
             	</tr>
             	<tr>
-                	<td>Input HIGH</td><td>Voltage to read digital read HIGH (true)</td><td>TBD V</td>
+                	<td>Input HIGH</td><td>Voltage to read digital read HIGH (true)</td><td>2.0 V</td>
             	</tr>
             	<tr>
                 	<td>Input protection</td><td>Over-voltage protection</td><td>clamped</td>
