--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="log_filebrowser_buttons">
-            <input id="btn_refresh_sdcard" class="button" type="button" name="btn_refresh_sdcard" value="&circlearrowleft; Refresh file list" onclick="filebrowserRefresh()"/>
+            <input id="btn_refresh_sdcard" class="button" type="button" name="btn_refresh_sdcard" value="&circlearrowleft; Refresh file list" onclick="filebrowserRefresh('/')"/>
             <input id="btn_format_sdcard" class="button" type="button" name="btn_format_sdcard" value="Format SD-card..." onclick="filebrowserFormat()"/>
         </div>
 
