--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -52,13 +52,16 @@
 
 				<p>After entering the connection details above, you can test the WiFi connection by clicking on the button below.</p>
 				<p><i><b>Tip:</b> after configuring, this page will be available via http://IPADDRESS (e.g. http://192.168.1.123).</i></p>
-				<input id="btn_test_wifi_network" class="button_text" type="button" value="Test connection" onclick="testWifiNetwork()">
+				
 				<p>
 					Connection: <span id="WIFI_TEST_STATUS" name="WIFI_TEST_STATUS">...</span><br/>
 					IP-address: <span id="WIFI_TEST_IP" name="WIFI_TEST_IP">0.0.0.0</span><br/>
 					RSSI: <span id="WIFI_TEST_RSSI" name="WIFI_TEST_RSSI">-</span> dB
 				</p>
 				<p><i><b>Note:</b> the WiFi-signal strength (RSSI) should be above -80 dB for a stable connection (e.g. -75 dB is OK).</i></p>
+			</div>
+			<div>
+				<input id="btn_test_wifi_network" class="button_text" type="button" value="Save Wi-Fi settings" onclick="setConfig()">
 			</div>
 		</div>
 
