--- a/main/upload_script.html
+++ b/main/upload_script.html
@@ -109,7 +109,15 @@
     </td>
   </tr>
 </table>
-<div id="fw-update-state"></div>
+<div id="fw-update-state">
+  <label for=" update-progress" id="update-progress-label"></label>
+  <progress
+    id="update-progress"
+    value="0"
+    max="4"
+    style="width: 250px"
+  ></progress>
+</div>
 <script>
   function setpath() {
     var default_path = document.getElementById("ota_main").files[0].name;
@@ -147,7 +155,8 @@
     try {
       for (let i = 0; i < 3; i++) {
         if (files[i]) {
-          myDiv.innerHTML += "<p>Uploading file " + (i + 1) + " of 3...</p>";
+          // myDiv.innerHTML += "<p>Uploading file " + (i + 1) + " of 3...</p>";
+          myDiv.value = i + 1;
           const resultMsg = await upload(files[i], upload_path[i]);
         }
       }
@@ -178,6 +187,7 @@
     switch (number) {
       case 0:
         document.getElementById("fw-update-state").innerHTML += "<p>IDLE</p>";
+
         break;
 
       case 1:
@@ -209,15 +219,19 @@
 
   async function doWork(files, upload_path, myDiv) {
     try {
+      document.getElementById("update-progress-label").innerText =
+        "Uploading files...";
       const result = await uploadFiles(files, upload_path, myDiv);
       if (!result) {
-        document.getElementById("fw-update-state").innerHTML =
+        document.getElementById("fw-update-state").innerText =
           "<p>Failed to upload files!</p>";
         return false;
       }
 
       // Start the FW update process
       try {
+        document.getElementById("update-progress-label").innerText =
+          "Upload complete! Rebooting and flashing...";
         result2 = await fetch("/fwupdate/startupgrade");
       } catch (result2) {
         document.getElementById("fw-update-state").innerHTML =
@@ -225,23 +239,47 @@
         return false;
       }
 
+      // wait for 60 seconds
+      var countdown = 60;
+      var timer = setInterval(function () {
+        countdown--;
+        if (countdown <= 0) {
+          clearInterval(timer);
+          document.getElementById("update-progress-label").innerText =
+            "Done! Forwarding... Make sure you are connected to the same Wi-Fi as the Uberlogger";
+          return;
+        }
+
+        if (countdown < 10) {
+          document.getElementById("update-progress-label").innerText =
+            "Waiting for Uberlogger to finish flashing... " +
+            countdown +
+            " seconds left. Almost...";
+        } else {
+          document.getElementById("update-progress-label").innerText =
+            "Waiting for Uberlogger to finish flashing... " +
+            countdown +
+            " seconds left";
+        }
+      }, 1000);
+      console.log("Trying to connect");
+
       // Keep polling for state of FW updater
       const intervalId = setInterval(() => {
         fetch("/fwupdate/state")
           .then((response) => response.json())
           .then((data) => {
-            processNumber(data);
-            if (data === 4) {
-              clearInterval(intervalId);
-              // Wait for 3 seconds before forwarding to main page
-              setTimeout(() => {
-                window.location.href = "/";
-              }, 3000);
-            }
+            // processNumber(data);
+            // if (data === 0) {
+            clearInterval(intervalId);
+            // Wait for 3 seconds before forwarding to main page
+            setTimeout(() => {
+              window.location.href = "/";
+            }, 3000);
+            // }
           })
           .catch((error) => console.error("Error:", error));
       }, 1000);
-      console.log("done");
     } catch (err) {
       alert("Upload failed: " + err);
       return false;
@@ -256,7 +294,7 @@
 
     if (
       !confirm(
-        "You are about to flash your Uberlogger. Are you sure you have selected the correct files in the correct fields? Failing to do so will result in bricking your Uberlogger!!"
+        "You are about to flash your Uberlogger. Do not interrupt this process, since this may brick your Uberlogger! Continue?"
       )
     ) {
       return;
@@ -264,7 +302,8 @@
 
     var lastResponseLength = 0;
 
-    var myDiv = document.getElementById("fw-update-state");
+    // var myDiv = document.getElementById("fw-update-state");
+    var myDiv = document.getElementById("update-progress");
     myDiv.innerHTML = "";
     // myDiv.innerHTML += "<p>Uploading files...</p>";
 
