--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -215,10 +215,12 @@
 				<p><i><b>Tip:</b> after configuring, this page will be available via http://IPADDRESS (e.g. http://192.168.1.123).</i></p>
 				
 				<p>
-					Connection: <span id="WIFI_TEST_STATUS" name="WIFI_TEST_STATUS">...</span><br/>
+					Connection: <span id="WIFI_TEST_STATUS" name="WIFI_TEST_STATUS">...</span><input type="checkbox" name="switch" id="wifi-state-checkbox" class="check" style="display: none;"><br/>
 					IP-address: <span id="WIFI_TEST_IP" name="WIFI_TEST_IP">0.0.0.0</span><br/>
 					RSSI: <span id="WIFI_TEST_RSSI" name="WIFI_TEST_RSSI">-</span> dB
 				</p>
+
+				
 				<p><i><b>Note:</b> the Wi-Fi-signal strength (RSSI) should be above -80 dB for a stable connection (e.g. -75 dB is OK).</i></p>
 			</div>
 			<div>
