Channel selection wifi added

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -263,6 +263,31 @@
 
     <h2>Wi-Fi configuration</h2>
     <div class="group" id="wifi_configuration">
+      <h3>Wi-Fi channel Hotspot</h3>
+      <p>
+        Select the Wi-Fi channel for the hotspot
+        <select name="WIFI_CHANNEL" id="WIFI_CHANNEL" class="json-as-number">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+          <option value="13">13</option>
+        </select>
+      </p>
+      <p>
+        <i
+          ><b>Note: </b>Please reset the Uberlogger manually after saving this
+          setting</i
+        >
+      </p>
       <h3>Connection mode</h3>
       <span>
         <input
