Logging_check_sdcard compact

--- a/front/www/index.html
+++ b/front/www/index.html
@@ -34,7 +34,7 @@
                 <tr>
                   <td>Logger status:</td>
                   <td><span name="LOGGER_STATE">-</span></td>
-                  <td>Eject card</td>
+                  <td>Unmount card</td>
                   <td><button onclick="ejectCard()">&#9167;</button></td>
                 </tr>
 
