Refresh file button / format / eject buttons disabled when sd card unmounted

--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -63,6 +63,14 @@
         value="Format SD-card..."
         onclick="filebrowserFormat()"
       />
+      <input
+        id="btn_unmount_sdcard"
+        class="button"
+        type="button"
+        name="btn_unmount_sdcard"
+        value="&#9167; Unmount SD-card"
+        onclick="ejectCard()"
+      />
     </div>
   </div>
 </div>
