--- a/front/www/index.html
+++ b/front/www/index.html
@@ -35,7 +35,15 @@
                   <td>Logger status:</td>
                   <td><span name="LOGGER_STATE">-</span></td>
                   <td>Unmount card</td>
-                  <td><button onclick="ejectCard()">&#9167;</button></td>
+                  <td>
+                    <button
+                      onclick="ejectCard()"
+                      id="btn_unmount_sdcard_top"
+                      name="btn_unmount_sdcard_top"
+                    >
+                      &#9167;
+                    </button>
+                  </td>
                 </tr>
 
                 <tr>
