Changed "View live data"  to "Live data"

--- a/front/www/html/home.html
+++ b/front/www/html/home.html
@@ -1,11 +1,10 @@
 <h1>Home</h1>
 
-<p>Welcome to the UberLogger control panel.</p>
 <div>
 <h2 class="first">Overview</h2>
   <p>Within the control panel you can:
     <ul>
-      <li>Plot measured data from a live stream using the "View live data"-page;</li>
+      <li>Plot measured data from a live stream using the "Live data"-page;</li>
       <li>Start SD-card logging using the "Logging"-page;</li>
       <li>Configure the logger, input channels and WiFi-functionality through the "Configuration"-page.</li>
     </ul>
