Changed "View live data"  to "Live data"

--- a/front/www/html/liveview.html
+++ b/front/www/html/liveview.html
@@ -1,11 +1,11 @@
-<h1>View live data</h1>
+<h1>Live data</h1>
 
 <div class="flexcontainer">
   <div id="values">
     <div id="valuelist"><i>Loading...</i></div>
-  </div>  
-  
+  </div>
+
   <div id="plot" class="greybox">
     <div id="plotly"></div>
-  </div>  
+  </div>
 </div>
