--- a/front/www/index.html
+++ b/front/www/index.html
@@ -58,7 +58,7 @@
           <div id="topmenubar">
             <button id="menu_home" onclick="gotoPage('home');">Home</button>
             <button id="menu_liveview" onclick="gotoPage('liveview');">
-              View live data
+              Live data
             </button>
             <button id="menu_log" onclick="gotoPage('log');">Logging</button>
             <button id="menu_config" onclick="gotoPage('config');">
