Instruct user to reset Uberlogger in case of FW upload fail

--- a/main/upload_script.html
+++ b/main/upload_script.html
@@ -163,7 +163,11 @@
 
       return true;
     } catch (err) {
-      alert("Upload failed: " + err);
+      alert(
+        "Upload failed: " +
+          err +
+          ". Please press the reset button of the Uberlogger and try again."
+      );
       return false;
     }
   }
