Calibration status message

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -269,6 +269,7 @@
           onClick="startCalibration()"
           value="Start calibration"
         />
+        <p id="calibStatus"></p>
       </div>
 
       <!-- <h3>Digital channels</h3>
