changed filebrowserFormat to /ajax/formatSdcard

--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -61,7 +61,7 @@
         type="button"
         name="btn_format_sdcard"
         value="Format SD-card..."
-        onclick="filebrowserFormat()"
+        onclick="formatSdcard()"
       />
       <input
         id="btn_unmount_sdcard"
