Added save all settings button

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -469,8 +469,18 @@
           Download current settings
         </button></a
       >
+      <h3 class="first">Save all settings</h3>
+      <input
+          id="btn_test_wifi_network"
+          class="button_text"
+          type="button"
+          value="Save all settings"
+          onclick="setConfig()"
+        />
     </div>
 
+    
+    
     <h2 class="first">Firmware</h2>
     <p>
       Current firmware version: <span name="FW_VERSION">-</span><br />
