quick manual explanation on oversampling removed

--- a/front/www/html/home.html
+++ b/front/www/html/home.html
@@ -63,7 +63,7 @@
       </p>
       <p>
         <b>Resolution:</b> The sampling resolution is adjustable between 12 and 16 bits.
-        Selecting 12 bits disables oversampling and bypasses the digital anti-aliassing filter. This allows measurements which rely on aliassing (frequency-folding) to occur.
+        Selecting 12 bits bypasses the digital anti-aliassing filter. This allows measurements which rely on aliassing (frequency-folding) to occur.
         Note that the hardware anti-aliassing filter is always enabled and has a first-order roll off and a bandwith of 10 kHz.
       </p>
     </div>
