timeout on filebrowser update after delete, removed superfluous text in config page regarding voltage range in combination with NTC

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -67,16 +67,8 @@
       <h3>Analog channels</h3>
       <p>Select the mode used for the analog channels.</p>
       <p>
-        <i
-          ><b>Important:</b> ensure the hardware configuration (DIP-switch
-          setting) is equal to the settings below.</i
-        >
-      </p>
-      <p>
-        <i
-          ><b>Note:</b> range select has no effect when the NTC temperature
-          input is used.</i
-        >
+        <i><b>Important:</b> ensure the hardware configuration (DIP-switch
+          setting) is equal to the settings below.</i>
       </p>
 
       <table>
